--- a/templates/form.html
+++ b/templates/form.html
@@ -5,19 +5,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Take or Upload an Image</title>
-    <link rel="stylesheet" href="/static/style.css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-
   <body>
     <h1>Take or Upload an Image</h1>
-    <button id="capture-button">Capture Image</button>
-    <canvas id="canvas" style="display: none"></canvas>
-    <img
-      id="image-preview"
-      src=""
-      alt="Preview"
-      style="max-width: 300px; max-height: 300px"
-    />
+    <div id="camera-container">
+      <video id="video" width="300" height="300" autoplay></video>
+      <button id="capture-button">Capture Image</button>
+    </div>
+    <div id="preview-container" style="display: none">
+      <img
+        id="image-preview"
+        src=""
+        alt="Preview"
+        style="max-width: 300px; max-height: 300px"
+      />
+      <button id="retake-button">Retake</button>
+      <button id="next-button">Next</button>
+    </div>
     <script src="{{ url_for('static', filename='app.js') }}"></script>
   </body>
 </html>
