--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,98 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html lang="en">
+  <head>
+    <title>ABOUT US</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lato"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
 
-<h1>Analyze the Image</h1>
+  </head>
 
-</body>
+
+  <body>
+    <!-- Navbar -->
+    <div class="w3-top">
+      <div class="w3-bar w3-black w3-card">
+        <a
+          class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
+          href="javascript:void(0)"
+          onclick="myFunction()"
+          title="Toggle Navigation Menu"
+          ><i class="fa fa-bars"></i
+        ></a>
+        <a href="/" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+        <a
+          href="home"
+          class="w3-bar-item w3-button w3-padding-large w3-hide-small"
+          >ABOUT US</a
+        >
+
+      </div>
+      
+    </div>
+
+    <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
+    <div
+      id="navDemo"
+      class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top"
+      style="margin-top: 46px"
+    >
+      <a
+        href="#band"
+        class="w3-bar-item w3-button w3-padding-large"
+        onclick="myFunction()"
+        >BAND</a
+      >
+      <a
+        href="#tour"
+        class="w3-bar-item w3-button w3-padding-large"
+        onclick="myFunction()"
+        >TOUR</a
+      >
+    </div>
+
+  <body>
+    <!-- About Section -->
+    <div
+      class="w3-container w3-content w3-center w3-padding-64"
+      style="max-width: 800px"
+      id="about"
+    >
+      <h2 class="w3-wide">ABOUT US</h2>
+      <p class="w3-opacity"><i>Vision Pro Max</i></p>
+      <p class="w3-justify">
+        As a team composed of members with engineering backgrounds, our
+        objective is to leverage robust and cutting-edge AI technology to
+        enhance the lives of individuals with disabilities. With the recent
+        release of Vision Pro, a platform facilitating immersion into virtual
+        worlds, we aim to empower visually impaired individuals by providing
+        them with the means to visualize and navigate the world around them. By
+        harnessing advanced technology, such as visual inputs integrated with
+        Gemini, we endeavor to enable blind individuals to perceive their
+        surroundings akin to sighted individuals, thus facilitating their
+        interpretation of the world and enhancing their independence and quality
+        of life.
+      </p>
+      <div class="w3-row w3-padding-32"></div>
+    </div>
+
+  <div class="w3-content" style="max-width: 2000px">
+    <div class="w3-display-container w3-center">
+      <img
+        src="https://media.discordapp.net/attachments/1194004645601886209/1223825072171778089/banner.png?ex=661b42ea&is=6608cdea&hm=b2bac548092bd5c5d24d28cd46c31a024cc2a4b1b0cffc9f901c9d1a7b2298ae&=&format=webp&quality=lossless&width=1440&height=480"
+        style="width: 100%"
+      />
+    </div>
+  </div>
+    <script src="{{ url_for('static', filename='app.js') }}"></script>
+  </body>
 </html>
