Update buttons for no/yes

--- a/templates/form.html
+++ b/templates/form.html
@@ -77,8 +77,8 @@
           style="max-width: 300px; max-height: 300px"
         />
         <div class="container" style="margin-top: 50px">
-          <button id="retake-button">Retake</button>
-          <button id="next-button">Analyze</button>
+          <button id="retake-button">No</button>
+          <button id="next-button">Yes</button>
         </div>
       </div>
     </div>
