Update about us

--- a/templates/home.html
+++ b/templates/home.html
@@ -77,17 +77,17 @@
       <h2 class="w3-wide">ABOUT US</h2>
       <p class="w3-opacity"><i>Vision Pro Max</i></p>
       <p class="w3-justify">
-        As a team composed of members with engineering backgrounds, our
-        objective is to leverage robust and cutting-edge AI technology to
-        enhance the lives of individuals with disabilities. With the recent
-        release of Vision Pro, a platform facilitating immersion into virtual
-        worlds, we aim to empower visually impaired individuals by providing
-        them with the means to visualize and navigate the world around them. By
-        harnessing advanced technology, such as visual inputs integrated with
-        Gemini, we endeavor to enable blind individuals to perceive their
-        surroundings akin to sighted individuals, thus facilitating their
-        interpretation of the world and enhancing their independence and quality
-        of life.
+        As a team composed of members with engineering backgrounds, 
+        our objective is to leverage robust and cutting-edge AI 
+        technology to improve the lives of individuals with visual 
+        disabilities. Taking inspiration from the recent release of 
+        Vision Pro, we aim to empower visually impaired individuals 
+        by providing them with the means to visualize and navigate 
+        the world around them. By harnessing advanced technology, such 
+        as visual inputs integrated with Google Gemini, we endeavor to 
+        enable blind individuals to perceive their surroundings akin to 
+        sighted individuals, thus facilitating their interpretation of the 
+        world and enhancing their independence and quality of life.
       </p>
       <div class="w3-row w3-padding-32"></div>
     </div>
